test/files/pos/t12133/UniqueConstraint.java
package pkg;

public @interface UniqueConstraint {
  String[] columnNames();
}
