test/files/neg/java-annotation-bad/Ann_1.java
package ann;

public @interface Ann_1 {
    N[] value();

    public @interface N {}
}